--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                20/02
+                27/02
               </a>
             </h3>
             <p>
@@ -58,7 +58,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE GUISADA </li>
+              <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> CALABRESA E ACEBOLADA </li> -->
               <!-- <li> DOBRADINHA </li> -->
@@ -66,13 +66,13 @@
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> FEIJOADA </li> -->
-              <li> FILE DE FRANGO </li>
+              <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -84,7 +84,7 @@
               <!-- <li> ROUPA VELHA </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> STROGONOFF DE CARNE </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -98,10 +98,10 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -120,7 +120,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                21/02
+                28/02
               </a>
             </h3>
             <p>
@@ -134,10 +134,10 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
-              <li> QUARENTÃO </li>
+              <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
@@ -147,7 +147,7 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> BIFE ACEBOLADO </li>
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BIFE A PARMEGIANA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
@@ -168,12 +168,12 @@
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <li> LINGUIÇA DE FRANGO </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO </li>
-              <li> PIRARUCU FRITO </li>
+              <!-- <li> PICADINHO </li> -->
+              <!-- <li> PIRARUCU FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -210,7 +210,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                22/02
+                01/03
               </a>
             </h3>
             <p>
@@ -229,9 +229,9 @@
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <li> SOPA </li>
+              <!-- <li> SOPA </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
             </p></br>
@@ -239,11 +239,11 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <li> BIFE ACEBOLADO </li>
+              <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <!-- <li> CALABRESA E OVO </li> -->
+              <li> CALABRESA E OVO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -262,9 +262,9 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
+              <li> PEIXE FRITO </li>
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -284,11 +284,11 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <!-- <li> KIKÃO </li> -->
+              <li> KIKÃO </li>
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
-              <li> PIT STOP / IOGURTE </li>
+              <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
@@ -303,7 +303,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                23/02
+                02/03
               </a>
             </h3>
             <p>
@@ -313,7 +313,7 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FRUTAS </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
@@ -321,7 +321,7 @@
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
 
@@ -339,6 +339,7 @@
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <li> ESCONDIDINHO DE CARNE</li>
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
@@ -351,7 +352,7 @@
               <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -372,7 +373,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
+              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -385,7 +386,7 @@
               <!-- <li> MINGAU </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
-              <!-- <li> PIT STOP / IOGURTE </li> -->
+              <li> PIT STOP / IOGURTE </li>
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
@@ -398,7 +399,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                24/02
+                03/03
               </a>
             </h3>
             <p>
@@ -417,9 +418,9 @@
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> TAPIOCA COM QUEIJO </li> -->
+              <li> TAPIOCA COM QUEIJO </li>
 
               <!-- <li> FAROFA DE CONSERVA </li> -->
 
@@ -434,10 +435,11 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO </li> -->
+              <li> CHURRASCO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FEIJOADA </li>
+              <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
@@ -447,7 +449,7 @@
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE CARNE COM FRITAS</li>
+              <!-- <li> ISCA DE CARNE COM FRITAS</li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA </li> -->
@@ -479,8 +481,8 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
-              <!-- <li> X SALADA </li> -->
+              <!-- <li> SALGADO </li> -->
+              <li> X SALADA </li>
             </ul>
             </p>
           </div>
@@ -491,7 +493,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                25/02
+                04/03
               </a>
             </h3>
             <p>
@@ -501,12 +503,12 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -531,12 +533,12 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
-              <li> ISCA DE CALABRESA </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
@@ -546,7 +548,7 @@
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> PEITO DE FRANCO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -559,14 +561,14 @@
             <P class="desjejum">LANCHE:</P>
             <ul>
               <!-- <li> ABACATADA COM BOLACHA </li> -->
-              <!-- <li> BAQUETE </li> -->
+              <li> BAQUETE </li>
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <li> MISTO QUENTE </li>
+              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -584,7 +586,7 @@
 
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                26/02
+                05/03
               </a>
             </h3>
             <p>
@@ -598,11 +600,12 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO </li>
               <!-- <li> SALSICHA COM MOLHO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
@@ -612,16 +615,16 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <li> BIFE ACEBOLADO </li>
+              <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
-              <li> FILE DE FRANGO </li>
+              <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
@@ -633,7 +636,7 @@
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <li> LINGUIÇA DE FRANGO </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -654,9 +657,10 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> KIKÃO </li>
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <li> PÃO COM QUEIJO, PRESUNTO E OVO </li>
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
